Add first tasks

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 					</div>
 				</aside>
 				<section>
+					<div class="maxvalues_form">
+						<div class="values"></div>
+						<input type="text" class="value">
+						<button id="addValueButton">Додати значення</button>
+						<button id="findMax">Знайти кількість максимальних</button>
+					</div>
 					<div class="title">	Gallery</div>
 					<map name="image1">
 						<area shape="rect" coords="140,0,317,196" href="page2.html" alt="">
