test local storage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 			<main>
 				<aside>
 					<div class="feedback side-block">
+						<div class="color_form">
+							<input type="color" id="backgroundColor">
+							<label for="backgroundColor">Кольор фону</label>
+						</div>
 						<div class="title">Last Feedback</div>
 						<div class="text">“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam feugiat vitae sem non varius. ”
 							<div class="author"> – Dillan Sullivan</div></div>
+
 					</div>
 					<div class="contact-form side-block">
 						<div class="title">Need support?</div>
