--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="content">
 			<main>
 				<aside>
-					<div class="feedback side-block editable" id="2">
+					<div class="feedback side-block editable hastextarea" id="2">
 						<div class="color_form">
 							<input type="color" id="backgroundColor">
 							<label for="backgroundColor">Кольор фону</label>
@@ -43,18 +43,20 @@
 						<button id="addValueButton">Додати значення</button>
 						<button id="findMax">Знайти кількість максимальних</button>
 					</div>
-					<div class="title editable" id="3">Gallery</div>
-					<map name="image1">
-						<area shape="rect" coords="140,0,317,196" href="page2.html" alt="">
-					</map>
-					<map name="image2">
-						<area shape="circle" coords="120,100,55" href="page3.html" alt="">
-					</map>
-					<div class="photos">
-						<img src="./images/image1.png" alt="" usemap="#image1">
-						<img src="./images/image2.png" alt="" usemap="#image2">
-						<img src="./images/image3.png" alt="">
-						<img src="./images/image4.png" alt="">
+					<div class="editable hastextarea" id="3">
+						<div class="title">Gallery</div>
+						<map name="image1">
+							<area shape="rect" coords="140,0,317,196" href="page2.html" alt="">
+						</map>
+						<map name="image2">
+							<area shape="circle" coords="120,100,55" href="page3.html" alt="">
+						</map>
+						<div class="photos">
+							<img src="./images/image1.png" alt="" usemap="#image1">
+							<img src="./images/image2.png" alt="" usemap="#image2">
+							<img src="./images/image3.png" alt="">
+							<img src="./images/image4.png" alt="">
+						</div>
 					</div>
 				</section>
 			</main>
